--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,34 +1,34 @@
 @font-face {
-    font-family: 'Gilroy';
-    src: url('../assets/fonts/Gilroy-Light.ttf') format('truetype');
-    font-weight: 300; /* Light */
-    font-style: normal;
+  font-family: "Gilroy";
+  src: url("../assets/fonts/Gilroy-Light.ttf") format("truetype");
+  font-weight: 300; /* Light */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('../assets/fonts/Gilroy-Regular.ttf') format('truetype');
-    font-weight: 400; /* Regular */
-    font-style: normal;
+  font-family: "Gilroy";
+  src: url("../assets/fonts/Gilroy-Regular.ttf") format("truetype");
+  font-weight: 400; /* Regular */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('../assets/fonts/Gilroy-Medium.ttf') format('truetype');
-    font-weight: 500; /* Medium */
-    font-style: normal;
+  font-family: "Gilroy";
+  src: url("../assets/fonts/Gilroy-Medium.ttf") format("truetype");
+  font-weight: 500; /* Medium */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('../assets/fonts/Gilroy-Bold.ttf') format('truetype');
-    font-weight: 700; /* Bold */
-    font-style: normal;
+  font-family: "Gilroy";
+  src: url("../assets/fonts/Gilroy-Bold.ttf") format("truetype");
+  font-weight: 700; /* Bold */
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gilroy';
-    src: url('../assets/fonts/Gilroy-Heavy.ttf') format('truetype');
-    font-weight: 900; /* Heavy */
-    font-style: normal;
+  font-family: "Gilroy";
+  src: url("../assets/fonts/Gilroy-Heavy.ttf") format("truetype");
+  font-weight: 900; /* Heavy */
+  font-style: normal;
 }
