--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+
+body {
+  background-color: white;
+}
+
 @font-face {
   font-family: "Gilroy";
   src: url("../assets/fonts/Gilroy-Light.ttf") format("truetype");
